fixes profile title font-resizing and spacing for short screens (closes #641)

--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -600,7 +600,7 @@ body.profile, body.map, body.story {
       height: 100%;
       opacity: 1;
       margin: 0;
-      padding: 7% 0;
+      padding: 50px 0;
       @include box();
       z-index: 1;
       position: relative;
@@ -619,10 +619,6 @@ body.profile, body.map, body.story {
       &.hide {
         opacity: 0;
         pointer-events: none;
-      }
-
-      .f {
-        @include flex-size(1);
       }
 
       .splash-titles {
@@ -926,6 +922,10 @@ body.profile, body.map, body.story {
       position: absolute;
       text-align: center;
       width: 300px;
+
+      @media only screen and (max-height : 500px) {
+        display: none;
+      }
 
       .mouse {
         @include transition(opacity 1s);
